output_10.1.168/dslash_improved_staggered.cu.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
In file included from /tmp/dslash_improved_staggered.cu-cea772.hip:1:
./quda/include/dslash.h:432:71: error: use of undeclared identifier 'QUDA_RECONSTRUCT'
      errorQuda("QUDA_RECONSTRUCT=%d does not enable reconstruct-18", QUDA_RECONSTRUCT);
                                                                      ^
./quda/include/dslash.h:438:71: error: use of undeclared identifier 'QUDA_RECONSTRUCT'
      errorQuda("QUDA_RECONSTRUCT=%d does not enable reconstruct-12", QUDA_RECONSTRUCT);
                                                                      ^
./quda/include/dslash.h:444:71: error: use of undeclared identifier 'QUDA_RECONSTRUCT'
      errorQuda("QUDA_RECONSTRUCT=%d does not enable reconstruct-12", QUDA_RECONSTRUCT);
                                                                      ^
./quda/include/dslash.h:482:71: error: use of undeclared identifier 'QUDA_PRECISION'
      errorQuda("QUDA_PRECISION=%d does not enable double precision", QUDA_PRECISION);
                                                                      ^
./quda/include/dslash.h:488:71: error: use of undeclared identifier 'QUDA_PRECISION'
      errorQuda("QUDA_PRECISION=%d does not enable single precision", QUDA_PRECISION);
                                                                      ^
./quda/include/dslash.h:494:69: error: use of undeclared identifier 'QUDA_PRECISION'
      errorQuda("QUDA_PRECISION=%d does not enable half precision", QUDA_PRECISION);
                                                                    ^
./quda/include/dslash.h:500:72: error: use of undeclared identifier 'QUDA_PRECISION'
      errorQuda("QUDA_PRECISION=%d does not enable quarter precision", QUDA_PRECISION);
                                                                       ^
In file included from /tmp/dslash_improved_staggered.cu-cea772.hip:4:
In file included from ./quda/include/color_spinor_field_order.h:26:
In file included from ./quda/include/thrust_helper.cuh:8:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/vector.h:25:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/memory.h:25:
In file included from /sw/summit/cuda/10.1.168/include/thrust/memory.h:25:
In file included from /sw/summit/cuda/10.1.168/include/thrust/detail/reference.h:173:
In file included from /sw/summit/cuda/10.1.168/include/thrust/detail/reference.inl:24:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/detail/adl/assign_value.h:42:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/assign_value.h:24:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/copy.h:98:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/internal/copy_device_to_device.h:34:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/transform.h:35:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/parallel_for.h:36:
In file included from /sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/agent_launcher.h:32:
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:71:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:78:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:85:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:92:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:99:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3,x4);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:106:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3,x4,x5);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:113:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3,x4,x5,x6);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:120:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3,x4,x5,x6,x7);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:127:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3,x4,x5,x6,x7,x8);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:134:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3,x4,x5,x6,x7,x8,x9);
       ^
/sw/summit/cuda/10.1.168/include/thrust/system/cuda/detail/core/triple_chevron_launch.h:141:8: error: use of undeclared identifier cudaConfigureCall
      k<<<grid, block, shared_mem, stream>>>(x0,x1,x2,x3,x4,x5,x6,x7,x8,x9,xA);
       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated when compiling for host.
Error while processing /tmp/dslash_improved_staggered.cu-cea772.hip.

[HIPIFY] info: file './quda/lib/dslash_improved_staggered.cu' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 2
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 24
  TOTAL bytes: 8043
  CHANGED lines of code: 3
  TOTAL lines of code: 212
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 1
  TIME ELAPSED s: 1.72
[HIPIFY] info: CONVERTED refs by type:
  type: 2
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 2
[HIPIFY] info: CONVERTED refs by names:
  cudaStream_t: 2
21,31c21
<   template <typename Float, int nDim, int nColor, int nParity, bool dagger, bool xpay, KernelType kernel_type, typename Arg>
<   struct StaggeredLaunch {
<     static constexpr const char *kernel = "quda::staggeredGPU"; // kernel name for jit compilation
<     template <typename Dslash>
<     inline static void launch(Dslash &dslash, TuneParam &tp, Arg &arg, const cudaStream_t &stream)
<     {
<       dslash.launch(staggeredGPU<Float, nDim, nColor, nParity, dagger, xpay, kernel_type, Arg>, tp, arg, stream);
<     }
<   };
< 
<   template <typename Float, int nDim, int nColor, typename Arg> class Staggered : public Dslash<Float>
---
>   template <typename Arg> class Staggered : public Dslash<staggered, Arg>
32a23,25
>     using Dslash = Dslash<staggered, Arg>;
>     using Dslash::arg;
>     using Dslash::in;
34,46c27,28
< protected:
<     Arg &arg;
<     const ColorSpinorField &in;
< 
< public:
<     Staggered(Arg &arg, const ColorSpinorField &out, const ColorSpinorField &in) :
<       Dslash<Float>(arg, out, in, "kernels/dslash_staggered.cuh"),
<       arg(arg),
<       in(in)
<     {
<     }
< 
<     virtual ~Staggered() {}
---
>   public:
>     Staggered(Arg &arg, const ColorSpinorField &out, const ColorSpinorField &in) : Dslash(arg, out, in) {}
50,56c32,34
<       if (in.Location() == QUDA_CPU_FIELD_LOCATION) {
<         errorQuda("Staggered Dslash not implemented on CPU");
<       } else {
<         TuneParam tp = tuneLaunch(*this, getTuning(), getVerbosity());
<         Dslash<Float>::setParam(arg);
<         Dslash<Float>::template instantiate<StaggeredLaunch, nDim, nColor>(tp, arg, stream);
<       }
---
>       TuneParam tp = tuneLaunch(*this, getTuning(), getVerbosity());
>       Dslash::setParam(tp);
>       Dslash::template instantiate<packStaggeredShmem>(tp, stream);
154,157d131
<     TuneKey tuneKey() const
<     {
<       return TuneKey(in.VolString(), typeid(*this).name(), Dslash<Float>::aux[arg.kernel_type]);
<     }
169,170c143,145
<       StaggeredArg<Float, nColor, recon_u, recon_l, improved> arg(out, in, U, L, a, x, parity, dagger, comm_override);
<       Staggered<Float, nDim, nColor, decltype(arg)> staggered(arg, out, in);
---
>       StaggeredArg<Float, nColor, nDim, recon_u, recon_l, improved> arg(out, in, U, L, a, x, parity, dagger,
>                                                                         comm_override);
>       Staggered<decltype(arg)> staggered(arg, out, in);
